--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <div class="overlay"></div>
         <div class="header-content container">
             <h1 class="header-title">
-                <span class="up">HI!</span>
-                <span class="down">I am John Doe</span>
+                <span class="up">XIN CHÀO!</span>
+                <span class="down">TôI là <br /> Trần Văn Tươi</span>
             </h1>
-            <p class="header-subtitle">FRONTEND WEB DESIGNER</p>
+            <p class="header-subtitle">FRONTEND WEB DEVELOPER</p>
 
             <button class="btn btn-primary">Visit My Works</button>
         </div>
